# WolframLibraryLink_libCZI

./: .gitignore  CMakeLists.txt  README.md  azure-pipelines.yml
.github/workflows/: helloworld.yml
CI/: SimpleHTTPServerWithUpload.py  autorun.expect  run_raspi.sh
Mathematica/: CZIReader.m  createPaclet.wls  run_createpaclet.cmd
Mathematica/CZIReader/: PacletInfo.wl  PacletInfo.wl.in
Mathematica/CZIReader/Kernel/: CZIReader.m
Mathematica/paclet/: PacletInfo.wl
Mathematica/paclet/Kernel/: CZIReader.m
enc_temp_folder/557cb8f5863024b917d4fe921ef61d1/: Initialization.cpp
enc_temp_folder/a76cb62090adadf516b0304ec9bd84a4/: CziReader.cpp
extlibs/libCZI/Src/: CMakeLists.txt
extlibs/libCZI/Src/libCZI/: CMakeLists.txt
modules/: FindMathematica.cmake  libCZI.cmake  rapidJSON.cmake
modules/libCZI/: CMakeLists.txt
wllczi/: CMakeLists.txt
wllczi/inc/: exportedFunctions.h
wllczi/src/: CziInstanceManager.cpp  CziInstanceManager.h  CziReader.cpp  CziReader.h  CziReaderSbBlkStore.cpp  CziReaderSbBlkStore.h  CziUtilities.cpp  CziUtilities.h  Initialization.cpp  MImageHelper.cpp  MImageHelper.h  WLLFunctions.cpp  WolframLibLinkUtils.cpp  WolframLibLinkUtils.h  dbgprint.cpp  dbgprint.h  errorhelper.cpp  errorhelper.h  finally.h  getLibInfo.cpp  getLibInfo.h  inc_libCzi.h  stringReturnHelper.cpp  stringReturnHelper.h  utils.cpp  utils.h  wllczi_Config.h.in
wllcziTests/: CMakeLists.txt  CziReaderTest.cpp  CziUtilitiesTest.cpp  WLLFunctionsTests.cpp  testutilities.cpp  testutilities.h
wllcziTests/samples/: test1.czi
